cmake_minimum_required(VERSION 3.8)
project(7559_concu_voley)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Concu-Voley/ipc-init-files/sem_comensales_en_puerta.txt
        Concu-Voley/ipc-init-files/sem_mesas_libres.txt
        Concu-Voley/ipc-init-files/sems_cancha_ocupada.txt
        Concu-Voley/ipc-init-files/sems_cant_canchas_libres.txt
        Concu-Voley/ipc-init-files/sems_cupido.txt
        Concu-Voley/ipc-init-files/sems_esperar_recepcionista.txt
        Concu-Voley/ipc-init-files/sems_jugadores_predio.txt
        Concu-Voley/ipc-init-files/sems_listo_para_jugar.txt
        Concu-Voley/ipc-init-files/sems_mesa_pago.txt
        Concu-Voley/ipc-init-files/sems_ranking.txt
        Concu-Voley/ipc-init-files/sems_termino_de_jugar.txt
        Concu-Voley/ipc-init-files/shm_caja.txt
        Concu-Voley/ipc-init-files/shm_comida_mesas.txt
        Concu-Voley/ipc-init-files/shm_facturas.txt
        Concu-Voley/ipc-init-files/shm_mesas_libres.txt
        Concu-Voley/ipc-init-files/shm_personas_living.txt
        Concu-Voley/src/main/ConcuVoley.cpp
        Concu-Voley/src/main/MainProcess.cpp
        Concu-Voley/src/main/MainProcess.h
        Concu-Voley/src/model/Cancha.cpp
        Concu-Voley/src/model/Cancha.h
        Concu-Voley/src/model/ClaveJugador.cpp
        Concu-Voley/src/model/ClaveJugador.h
        Concu-Voley/src/model/Comida.cpp
        Concu-Voley/src/model/Comida.h
        Concu-Voley/src/model/LlamadoAMozo.cpp
        Concu-Voley/src/model/LlamadoAMozo.h
        Concu-Voley/src/model/Menu.cpp
        Concu-Voley/src/model/Menu.h
        Concu-Voley/src/model/Pareja.cpp
        Concu-Voley/src/model/Pareja.h
        Concu-Voley/src/model/Partido.cpp
        Concu-Voley/src/model/Partido.h
        Concu-Voley/src/model/Pedido.cpp
        Concu-Voley/src/model/Pedido.h
        Concu-Voley/src/model/PedidoCuenta.cpp
        Concu-Voley/src/model/PedidoCuenta.h
        Concu-Voley/src/model/Plato.cpp
        Concu-Voley/src/model/Plato.h
        Concu-Voley/src/model/Resultado.cpp
        Concu-Voley/src/model/Resultado.h
        Concu-Voley/src/processes/AdminComensalesProcess.cpp
        Concu-Voley/src/processes/AdminComensalesProcess.h
        Concu-Voley/src/processes/AdminJugadoresProcess.cpp
        Concu-Voley/src/processes/AdminJugadoresProcess.h
        Concu-Voley/src/processes/CocineroProcess.cpp
        Concu-Voley/src/processes/CocineroProcess.h
        Concu-Voley/src/processes/CupidoProcess.cpp
        Concu-Voley/src/processes/CupidoProcess.h
        Concu-Voley/src/processes/GerenteProcess.cpp
        Concu-Voley/src/processes/GerenteProcess.h
        Concu-Voley/src/processes/GrupoComensalesProcess.cpp
        Concu-Voley/src/processes/GrupoComensalesProcess.h
        Concu-Voley/src/processes/JugadorProcess.cpp
        Concu-Voley/src/processes/JugadorProcess.h
        Concu-Voley/src/processes/MozoProcess.cpp
        Concu-Voley/src/processes/MozoProcess.h
        Concu-Voley/src/processes/PartidoProcess.cpp
        Concu-Voley/src/processes/PartidoProcess.h
        Concu-Voley/src/processes/Process.cpp
        Concu-Voley/src/processes/Process.h
        Concu-Voley/src/processes/RecepcionistaProcess.cpp
        Concu-Voley/src/processes/RecepcionistaProcess.h
        Concu-Voley/src/processes/TiemposEspera.h
        Concu-Voley/src/utils/ipc/fifo/Fifo.cpp
        Concu-Voley/src/utils/ipc/fifo/Fifo.h
        Concu-Voley/src/utils/ipc/fifo/FifoEscritura.cpp
        Concu-Voley/src/utils/ipc/fifo/FifoEscritura.h
        Concu-Voley/src/utils/ipc/fifo/FifoLectura.cpp
        Concu-Voley/src/utils/ipc/fifo/FifoLectura.h
        Concu-Voley/src/utils/ipc/lock/LockFile.cpp
        Concu-Voley/src/utils/ipc/lock/LockFile.h
        Concu-Voley/src/utils/ipc/pipe/Pipe.cpp
        Concu-Voley/src/utils/ipc/pipe/Pipe.h
        Concu-Voley/src/utils/ipc/semaphore/Semaforo.cpp
        Concu-Voley/src/utils/ipc/semaphore/Semaforo.h
        Concu-Voley/src/utils/ipc/shared-memory/MemoriaCompartida.h
        Concu-Voley/src/utils/ipc/signal/EventHandler.h
        Concu-Voley/src/utils/ipc/signal/SIGINT_Handler.h
        Concu-Voley/src/utils/ipc/signal/SIGINT_ProcessHandler.h
        Concu-Voley/src/utils/ipc/signal/SignalHandler.cpp
        Concu-Voley/src/utils/ipc/signal/SignalHandler.h
        Concu-Voley/src/utils/ipc/signal/SIGUSR1_Handler.h
        Concu-Voley/src/utils/logger/Logger.cpp
        Concu-Voley/src/utils/logger/Logger.h
        Concu-Voley/src/utils/parser/pugixml/pugiconfig.hpp
        Concu-Voley/src/utils/parser/pugixml/pugixml.cpp
        Concu-Voley/src/utils/parser/pugixml/pugixml.hpp
        Concu-Voley/src/utils/parser/Parser.cpp
        Concu-Voley/src/utils/parser/Parser.h
        Concu-Voley/src/utils/random/RandomUtil.cpp
        Concu-Voley/src/utils/random/RandomUtil.h
        Concu-Voley/src/utils/serializer/ClaveJugadorSerializer.cpp
        Concu-Voley/src/utils/serializer/ClaveJugadorSerializer.h
        Concu-Voley/src/utils/serializer/LlamadoAMozoSerializer.cpp
        Concu-Voley/src/utils/serializer/LlamadoAMozoSerializer.h Concu-Voley/src/utils/serializer/ResultadoSerializer.cpp Concu-Voley/src/utils/serializer/ResultadoSerializer.h)

add_executable(7559_concu_voley ${SOURCE_FILES})